broker/ops/k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: broker
  name: broker
spec:
  ports:
  - port: 3000
    targetPort: broker-http
  selector:
    app: broker
  type: ClusterIP
