broker/ops/k8s/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: broker
spec:
  rules:
    - host: broker.workshop.shipit.solutions
      http:
        paths:
          - backend:
              serviceName: broker
              servicePort: 3000
